k8s/06-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: simpleauth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: simple-auth-app:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
