k8s/07-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: simpleauth
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 8080
      targetPort: 5000
      nodePort: 30080
